<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">


        <ImageView
            android:id="@+id/ivItem"
            tools:src="@drawable/james_bond"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="@dimen/_20dp">

            <TextView
                style="@style/TitleTextAppearance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/name"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivRead"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                tools:src="@drawable/red_flag" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            tools:text="Name" />

        <TextView
            android:text="@string/crew_capacity"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TitleTextAppearance"/>

        <TextView
            android:id="@+id/tvCrewCapacity"
            android:layout_width="wrap_content"
            android:textSize="@dimen/_15sp"
            android:layout_height="wrap_content"
            tools:text="Crew Capacity" />

        <TextView
            android:text="@string/capability"
            style="@style/TitleTextAppearance"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvCapability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sp"
            tools:text="Capability" />

        <TextView
            android:text="@string/human_rated"
            style="@style/TitleTextAppearance"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvHumanRated"
            android:layout_width="wrap_content"
            android:textSize="@dimen/_15sp"
            android:layout_height="wrap_content"
            tools:text="Human Rated" />

        <TextView
            android:text="@string/in_use"
            style="@style/TitleTextAppearance"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvInUse"
            android:layout_width="wrap_content"
            android:textSize="@dimen/_15sp"
            android:layout_height="wrap_content"
            tools:text="In Use" />

        <TextView
            android:text="@string/maiden_flight"
            style="@style/TitleTextAppearance"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvMaidenFlight"
            android:layout_width="wrap_content"
            android:textSize="@dimen/_15sp"
            android:layout_height="wrap_content"
            tools:text="Maiden Flight" />

    </LinearLayout>
</ScrollView>